2004-06-17 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* string_selection_dialog.glade: Add Cancel button
	make label not translatable, since it is just a 
	placeholder.	

2004-05-16  Geert Stappers  <stappers@stappers.nl>

	* ChangeLog: new file.

	* cong-file-properties.glade: Disabled translation of
	  various strings that are not displayed. (bugzilla.g.o #139814)