@@ -296,20 +296,12 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkLabel" id="label11">
+	    <widget class="Custom" id="custom">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">This is a placeholder page.  Eventually you will be able to edit the language of the text here.
-
-This is listed in Bugzilla as bug #122536</property>
-	      <property name="use_underline">False</property>
-	      <property name="use_markup">False</property>
-	      <property name="justify">GTK_JUSTIFY_LEFT</property>
-	      <property name="wrap">True</property>
-	      <property name="selectable">False</property>
-	      <property name="xalign">0.5</property>
-	      <property name="yalign">0.5</property>
-	      <property name="xpad">0</property>
-	      <property name="ypad">0</property>
+	      <property name="creation_function">create_lang_editor</property>
+	      <property name="int1">0</property>
+	      <property name="int2">0</property>
+	      <property name="last_modification_time">Thu, 17 Jun 2004 11:19:20 GMT</property>
 	    </widget>
 	    <packing>
 	      <property name="tab_expand">False</property>
